@@ -1,6 +1,7 @@
 2022-12-08  Markus Gans  <guru.mail@muenster.de>
 	* Fixed the changes on printing of the last full-width character 
 	  in a virtual window
+	* Bugfix: getPrevCharLength() crashed on strings with a leading space
 
 2022-12-06  Markus Gans  <guru.mail@muenster.de>
 	* FLineEdit can set the alignment (left, center, or right) for 
